--- a/OsmAnd/res/values-de/strings.xml
+++ b/OsmAnd/res/values-de/strings.xml
@@ -2935,5 +2935,5 @@ Abgedeckte Fläche: %1$s x %2$s</string>
     <string name="quick_action_gpx_tracks_hide">GPX-Tracks ausblenden</string>
     <string name="quick_action_gpx_tracks_show">GPX Tracks einblenden</string>
     <string name="exit_at">Verlassen bei</string>
-    <string name="sit_on_the_stop">Sitzen an der Haltestelle</string>
+    <string name="sit_on_the_stop">Zusteigen an Haltestelle</string>
 </resources>
