--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -28,12 +28,12 @@
     <string name="step_by_step">Step by step</string>
     <string name="road_types">Road types</string>
     <string name="exit_at">Exit at</string>
-    <string name="sit_on_the_stop">Sit on the stop</string>
+    <string name="sit_on_the_stop">Board at stop</string>
     <string name="shared_string_swap">Swap</string>
     <string name="show_more">Show more</string>
     <string name="tracks_on_map">Tracks on the map</string>
     <string name="quick_action_show_hide_gpx_tracks">Show/Hide GPX Tracks</string>
-    <string name="quick_action_show_hide_gpx_tracks_descr">Tapping this action button shows or hides selected GPX tracks on map</string>
+    <string name="quick_action_show_hide_gpx_tracks_descr">Tapping this action button shows or hides selected GPX tracks on the map</string>
     <string name="quick_action_gpx_tracks_hide">Hide GPX Tracks</string>
     <string name="quick_action_gpx_tracks_show">Show GPX Tracks</string>
     <string name="add_destination_query">Please add Destination first</string>
