--- a/OsmAnd/res/values-el/strings.xml
+++ b/OsmAnd/res/values-el/strings.xml
@@ -236,7 +236,7 @@
 	<string name="send_files_to_osm">Αποστολή αρχείων GPX στο OSM;</string>
 	<string name="gpx_visibility_txt">Ορατότητα</string>
 	<string name="gpx_tags_txt">Ετικέτες</string>
-	<string name="gpx_description_txt">Περιγραφή</string>
+	<string name="shared_string_description">Περιγραφή</string>
 	<string name="validate_gpx_upload_name_pwd">Παρακαλούμε, καθορίστε το όνομα χρήστη OSM και τον κωδικό πρόσβασης για να ανεβάσετε τα αρχεία GPX.</string>
     	<string name="default_buttons_support">Υποστήριξη</string>
 	<string name="support_new_features">Υποστηρίξτε νέα χαρακτηριστικά</string>
