--- a/OsmAnd/res/values-ku/strings.xml
+++ b/OsmAnd/res/values-ku/strings.xml
@@ -48,7 +48,7 @@
     <string name="show_gpx">GPXê nîşan bide</string>
     <string name="working_days">Rojên Karê</string>
     <string name="poi_dialog_poi_type">Cureya POIyê</string>
-    <string name="description">Danasîn</string>
+    <string name="shared_string_description">Danasîn</string>
     <string name="next_proceed">Dû re</string>
     <string name="shared_string_sound">Deng</string>
     <string name="osb_author_dialog_password">Şîfreya OSMê (ne mecbûrî ye)</string>
