--- a/OsmAnd/res/values-bg/strings.xml
+++ b/OsmAnd/res/values-bg/strings.xml
@@ -405,7 +405,7 @@
     <string name="send_files_to_osm">Да се изпратят ли GPX файловете към OSM?</string>
     <string name="gpx_visibility_txt">Видимост</string>
     <string name="gpx_tags_txt">Етикети</string>
-    <string name="gpx_description_txt">Описание</string>
+    <string name="shared_string_description">Описание</string>
     <string name="validate_gpx_upload_name_pwd">Моля, въведете потребителското си име и парола от сайта на OSM за да качвате GPX файлове.</string>
     <string name="default_buttons_support">Поддръжка</string>
     <string name="support_new_features">Поддръжка за нови подобрения</string>
