--- a/OsmAnd/res/values-fa/strings.xml
+++ b/OsmAnd/res/values-fa/strings.xml
@@ -412,7 +412,7 @@
     <string name="send_files_to_osm">فایل‌های GPX به OSM ارسال شوند؟</string>
     <string name="gpx_visibility_txt">محرمانگی</string>
     <string name="gpx_tags_txt">برچسب‌ها</string>
-    <string name="gpx_description_txt">توضیحات</string>
+    <string name="shared_string_description">توضیحات</string>
     <string name="validate_gpx_upload_name_pwd">برای آپلودکردن فایل‌های GPX لطفاً نام کاربری و رمز عبور OSM خود را وارد کنید.</string>
     <string name="default_buttons_support">حمایت</string>
     <string name="support_new_features">حمایت از قابلیت‌های جدید</string>
