--- a/OsmAnd/res/values-hr/strings.xml
+++ b/OsmAnd/res/values-hr/strings.xml
@@ -242,7 +242,7 @@
 	
 	<string name="gpx_visibility_txt">Vidljivost</string>
 	<string name="gpx_tags_txt">Oznake</string>
-	<string name="gpx_description_txt">Opis</string>
+	<string name="shared_string_description">Opis</string>
 	<string name="validate_gpx_upload_name_pwd">Navedite OSM korisničko ime i lozinku za upload GPX datoteke.</string>
     	<string name="default_buttons_support">Podrška</string>
 	<string name="support_new_features">Podrži nove značajke</string>
