--- a/OsmAnd/res/values-hu/strings.xml
+++ b/OsmAnd/res/values-hu/strings.xml
@@ -3,7 +3,7 @@
     <string name="send_files_to_osm">GPX fájl küldése OSM-re?</string>
     <string name="gpx_visibility_txt">Láthatóság</string>
     <string name="gpx_tags_txt">Címkék</string>
-    <string name="gpx_description_txt">Leírás</string>
+    <string name="shared_string_description">Leírás</string>
     <string name="validate_gpx_upload_name_pwd">GPX fájl feltöltéséhez kérlek add meg az OSM-es felhasználóneved és jelszavad.</string>
     <string name="default_buttons_support">Támogatás</string>
     <string name="support_new_features">Új funkciók támogatása</string>
