--- a/OsmAnd/res/values-nb/strings.xml
+++ b/OsmAnd/res/values-nb/strings.xml
@@ -855,7 +855,7 @@
     <string name="share_route_as_gpx">Del rute som GPX-fil</string>
     <string name="modify_transparency">Endre gjennomsiktighet (0 - gjennomsiktig, 255 - ugjennomsiktig)</string>
     <string name="gpx_visibility_txt">Synlighet</string>
-    <string name="gpx_description_txt">Beskrivelse</string>
+    <string name="shared_string_description">Beskrivelse</string>
     <string name="use_transparent_map_theme">Gjennomsiktig tema</string>
     <string name="keep_informing_never">Bare manuelt (trykk pil)</string>
     <string name="local_index_installed">Lokal versjon</string>
