--- a/OsmAnd/res/values-pt-rBR/strings.xml
+++ b/OsmAnd/res/values-pt-rBR/strings.xml
@@ -929,7 +929,7 @@ Pôr do Sol: %2$s</string>
     <string name="send_files_to_osm">Enviar arquivos GPX para o OSM?</string>
     <string name="gpx_visibility_txt">Visibilidade</string>
     <string name="gpx_tags_txt">Etiquetas</string>
-    <string name="gpx_description_txt">Descrição</string>
+    <string name="shared_string_description">Descrição</string>
     <string name="validate_gpx_upload_name_pwd">Especificar seu nome e senha de usuário do OSM para enviar arquivos GPX.</string>
     <string name="default_buttons_support">Apoiar</string>
     <string name="support_new_features_descr">Doar para ver novos recursos implementados neste aplicativo.</string>
