--- a/OsmAnd/res/values-ro/strings.xml
+++ b/OsmAnd/res/values-ro/strings.xml
@@ -193,7 +193,7 @@
     <string name="send_files_to_osm">Trimiteți fișierele GPX la OSM?</string>
     <string name="gpx_visibility_txt">Vizibilitate</string>
     <string name="gpx_tags_txt">Tag-uri</string>
-    <string name="gpx_description_txt">Descriere</string>
+    <string name="shared_string_description">Descriere</string>
     <string name="validate_gpx_upload_name_pwd">Vă rog să specificați numele de utilizator și parola OSM pentru încărcarea fișierelor GPX.</string>
     <string name="default_buttons_support">Susțineri</string>
     <string name="support_new_features">Susțineți noi funcționalități</string>
