--- a/OsmAnd/res/values-sr/strings.xml
+++ b/OsmAnd/res/values-sr/strings.xml
@@ -1738,7 +1738,7 @@
     <string name="plugins_screen">Додаци</string>
     <string name="prefs_plugins">Додаци</string>
     <string name="gpx_visibility_txt">Видљивост</string>
-    <string name="gpx_description_txt">Опис</string>
+    <string name="shared_string_description">Опис</string>
     <string name="default_buttons_support">Подршка</string>
     <string name="support_new_features_descr">Донирајте да бисте видели нове функционалности у апликацији.</string>
     <string name="info_button">Информације</string>
