--- a/OsmAnd/res/values-sv/strings.xml
+++ b/OsmAnd/res/values-sv/strings.xml
@@ -127,7 +127,7 @@
     <string name="send_files_to_osm">Skicka GPX-filer till OSM?</string>
     <string name="gpx_visibility_txt">Synlighet</string>
     <string name="gpx_tags_txt">Taggar</string>
-    <string name="gpx_description_txt">Beskrivning</string>
+    <string name="shared_string_description">Beskrivning</string>
     <string name="validate_gpx_upload_name_pwd">Vänligen ange ditt OSM-användarnamn och lösenord för att ladda upp GPX-filer.</string>
     <string name="accessibility_mode">Tillgänglighetsläge</string>
     <string name="accessibility_mode_descr">Sätter på tillgänglighetsfunktioner.</string>
