--- a/OsmAnd/res/values-ta/strings.xml
+++ b/OsmAnd/res/values-ta/strings.xml
@@ -1248,7 +1248,7 @@
     <string name="plugins_screen">கூடுதல்</string>
     <string name="gpx_visibility_txt">தன்மை</string>
     <string name="gpx_tags_txt">குறிச்சொற்கள்</string>
-    <string name="gpx_description_txt">விளக்கம்</string>
+    <string name="shared_string_description">விளக்கம்</string>
     <string name="validate_gpx_upload_name_pwd">GPX கோப்புகளை பதிவேற்ற உங்கள் OSM பயனர் பெயர் மற்றும் கடவுச்சொல்லை குறிப்பிடவும்.</string>
     <string name="default_buttons_support">ஆதரவு</string>
     <string name="support_new_features">புதிய அம்சங்களை ஆதரிக்கவும்</string>
