--- a/OsmAnd/res/values-zh-rTW/strings.xml
+++ b/OsmAnd/res/values-zh-rTW/strings.xml
@@ -225,7 +225,7 @@
     <string name="send_files_to_osm">傳送 GPX 檔案到 OSM 嗎？</string>
     <string name="gpx_visibility_txt">能見度</string>
     <string name="gpx_tags_txt">標籤</string>
-    <string name="gpx_description_txt">敘述</string>
+    <string name="shared_string_description">敘述</string>
     <string name="validate_gpx_upload_name_pwd">請指定您的 OSM 使用者名稱和密碼用以上傳 GPX 檔案。</string>
     <string name="default_buttons_support">支援</string>
     <string name="support_new_features">支援新功能</string>
