--- a/OsmAnd/res/values-lt/strings.xml
+++ b/OsmAnd/res/values-lt/strings.xml
@@ -1369,7 +1369,7 @@ Tam prireiks {1} MB pastoviam saugojimui.
     <string name="int_days">dienos</string>
     <string name="osmo_connect_menu">Prisijungti</string>
     
-    <string name="osmo_group_description">Aprašymas</string>
+    <string name="xxxxx">Aprašymas</string>
     
     
     
@@ -1670,7 +1670,7 @@ Tam prireiks {1} MB pastoviam saugojimui.
     <string name="enable_proxy_descr">"Konfigūruoti  HTTP proksi serverį visoms tinklo užklausoms."</string>
     <string name="shared_string_disabled">Išjungta</string>
     <string name="shared_string_enabled">Įjungta</string>
-    <string name="plugin_description_title">Aprašymas</string>
+    <string name="xxxxx">Aprašymas</string>
 
     <string name="edit_group">Redaguoti grupę</string>
     <string name="plugin_install_needs_network">Prisijunkite prie interneto, jei norite įdiegti šį priedą.</string>
@@ -1896,7 +1896,7 @@ Ilguma %2$s</string>
     <string name="building_number">Pastato numeris</string>
     <string name="next_proceed">Toliau</string>
     
-    <string name="description">Aprašymas</string>
+    <string name="xxxxx">Aprašymas</string>
     <string name="add_opening_hours">Pridėti darbo valandas</string>
     <string name="poi_dialog_poi_type">LV tipas</string>
     <string name="opening_at">Darbo pradžia</string>
